# ISOLE-WEBSITE

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: backend-ci.yml
.openai/: hosting.json
app/: __init__.py  globals.css  layout.tsx  main.py  page.tsx  robots.ts  sitemap.ts
app/admin/: page.tsx
app/auth/: password.py  permissions.py  tokens.py
app/cloudinary/: __init__.py  cloudinary_service.py
app/config/: __init__.py  config.py  database.py  logging.py  security.py  settings.py
app/core/: __init__.py  constants.py  enums.py  responses.py
app/database/: __init__.py  database.py
app/exceptions/: __init__.py  exceptions.py  handlers.py
app/logging/: __init__.py  loggers.py
app/middleware/: __init__.py  auth.py  rate_limit.py  request_logging.py  sanitize.py  security_headers.py
app/models/: __init__.py  auth_token.py  base.py  category.py  image.py  product.py  setting.py  user.py
app/repositories/: __init__.py  base.py  categories.py  (+8 more)
docs/: AUDITORIA_INTEGRAL_ISABELLA.md  AUDITORIA_SEGURIDAD_ISABELLA.md  CONFIGURACION_SEGURIDAD_VERCEL.md
lib/: cloudinary-assets.ts  cloudinary-videos.ts  community-posts.ts  products.ts  seo.ts  site.ts
scripts/: local-static-server.mjs  migrate_assets_to_cloudinary.py  prepare-static-dist.mjs  seed_catalog.py  sync-instagram-community.mjs  upload_showroom_video_to_cloudinary.py
(+70 files in other folders)
